@@ -22,6 +22,9 @@ Next release
   constructor function, a ValueError is now raised eagerly instead of an error
   occuring during runtime.  See https://github.com/Pylons/waitress/pull/60
 
+- Fix parsing of multi-line (folded) headers.
+  See https://github.com/Pylons/waitress/issues/53
+
 0.8.9 (2014-05-16)
 ------------------
 
